Menambahkan Gambar pada My Skills dan sedikit merubah responsive pada button dalam form contact

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,18 @@ section {
 .contact {
     min-height: 900px;
 }
+
+.contact .tombol {
+    text-align: center;
+}
+
+/* Dekstop Version */
+@media (min-width: 800px) {
+    .contact .tombol {
+        text-align: left;
+    }    
+}
+
 /* Akhir Contact */
 
 /* Footer */
