Memperbaiki tampilan bagian Skills

--- a/css/style.css
+++ b/css/style.css
@@ -61,27 +61,43 @@ section {
 }
 /* Akhir About */
 
-/* Portfolio */
-.portfolio{
+/* Skills */
+.skills{
     background-color: #eee;
 }
 
-.portfolio .thumbnail {
+.skills .thumbnail {
     opacity: 0; /*untuk menghilangkan konten dengan class thumbnail*/
     transition: 0.5s;
     transform: translate(0, -40px); /*membuat efek munculnya sedikit keatas*/
 }
 
-.portfolio .thumbnail.muncul {
+.skills .thumbnail.muncul {
     opacity: 1;    /*untuk memunculkan kembali konten dengan class thumbnail dan ada class muncul didalamnya, class muncul disini akan ditambahkan menggunakan javascript*/
     transform: translate(0,0); /*mengembalikan gambar ke posisi semula, sehingga ada kesan jatuh*/
 }
-/* Akhir portfolio */
+/* Akhir skills */
 
+/* experience */
+.experience{
+    background-color: rgb(255, 255, 255);
+}
+
+.experience .thumbnail {
+    opacity: 0; /*untuk menghilangkan konten dengan class thumbnail*/
+    transition: 0.5s;
+    transform: translate(0, -40px); /*membuat efek munculnya sedikit keatas*/
+}
+
+.experience .thumbnail.muncul {
+    opacity: 1;    /*untuk memunculkan kembali konten dengan class thumbnail dan ada class muncul didalamnya, class muncul disini akan ditambahkan menggunakan javascript*/
+    transform: translate(0,0); /*mengembalikan gambar ke posisi semula, sehingga ada kesan jatuh*/
+}
+/* Akhir experience */
 
 /* Contact */
 .contact {
-    min-height: 900px;
+    min-height: 200px;
 }
 
 .contact .tombol {
