--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,18 @@ header img {
   background-color: orangered;
   border-radius: 0 0 25px 0;
 }
+
+#content .sub-title h3 {
+  border-bottom: 1px solid orange;
+}
+
+/* Card */
+.card {
+  border-radius: 10%;
+}
+
+.card h4 {
+  background-color: orange;
+  width: 60%;
+  border-radius: 0 0 15px 0;
+}
