--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,8 @@ header img {
   width: 60%;
   border-radius: 0 0 15px 0;
 }
+
+/* Social Media */
+#social-media a:hover i {
+  color: orangered;
+}
