--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,28 @@ header img {
   border-radius: 0 0 15px 0;
 }
 
+.portfolio-container {
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+  border-radius: 20px;
+}
+
+.portfolio-box {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  top: 0;
+  left: 0;
+  background-color: aqua;
+  z-index: 1;
+  display: none;
+}
+
+.portfolio-container:hover .portfolio-box {
+  display: block;
+}
+
 /* Social Media */
 #social-media a:hover i {
   color: orangered;
