--- a/css/style.css
+++ b/css/style.css
@@ -36,25 +36,29 @@ header img {
   border-radius: 0 0 25px 0;
 }
 
-#content .sub-title h3 {
+
+
+/* Resume Page */
+#resume .sub-title h3 {
   border-bottom: 1px solid orange;
 }
 
-/* Card */
-.card {
+#resume .card {
   border-radius: 10%;
 }
 
-.card h4 {
+#resume .card h4 {
   background-color: orange;
   width: 60%;
   border-radius: 0 0 15px 0;
 }
 
-.portfolio-container {
-  width: 300px;
-  height: 300px;
-  background-color: blue;
+
+
+/* Portfolio Page */
+/* .portfolio-container {
+  width: 100%;
+  height:  400px;
   border-radius: 20px;
 }
 
@@ -64,16 +68,18 @@ header img {
   border-radius: 20px;
   top: 0;
   left: 0;
-  background-color: aqua;
+  background-color: rgba(255, 165, 0, 0.9);
   z-index: 1;
   display: none;
 }
 
 .portfolio-container:hover .portfolio-box {
   display: block;
-}
+} */
 
-/* Social Media */
+
+
+/* Contact Page */
 #social-media a:hover i {
   color: orangered;
 }
