--- a/src/my-styles.css
+++ b/src/my-styles.css
@@ -49,11 +49,13 @@
     margin-top: 4rem;
     /* margin-top: 10vh; */
   }
-
-  /* Intro */
-  .judulIntro {
+  .judulHalaman {
     color: #005d66;
     text-shadow: 5px 2px 7px black;
+  }
+  .education-img{
+    width: 250px;
+    height: 250px;
   }
   /* ================= */
   /* AKHIR MAIN */
