--- a/src/my-styles.css
+++ b/src/my-styles.css
@@ -89,8 +89,8 @@
   /* ================= */
   nav {
     /* margin-left: 25vw; */
-    /* height: 5rem; */
-    height: 10vh;
+    height: 3.5rem;
+    /* height: 10vh; */
     background-color: #09707a;
   }
   nav .nav-link {
@@ -105,15 +105,15 @@
   /* ================= */
   main {
     /* margin-left: 25vw; */
-    /* margin-top: 5rem; */
-    margin-bottom: 10vh;
+    margin-bottom: 3.5rem;
+    /* margin-bottom: 10vh; */
   }
   #intro p {
     text-align: justify;
   }
   .judulHalaman {
     color: #005d66;
-    text-shadow: 1px 1px 5px black;
+    text-shadow: 0px 0px 3px black;
   }
   .education-img {
     width: 250px;
