--- a/src/my-styles.css
+++ b/src/my-styles.css
@@ -57,7 +57,7 @@
     width: 250px;
     height: 250px;
   }
-  #contact i:hover {
+  #contact .follow-me i:hover {
     color: #005d66;
   }
   /* ================= */
