--- a/src/my-styles.css
+++ b/src/my-styles.css
@@ -60,6 +60,17 @@
   #contact .follow-me i:hover {
     color: #005d66;
   }
+  .portfolio-modal {
+    width: 75vw !important;
+    max-width: none !important;
+    height: 90vh !important;
+    background-color: transparent !important;
+  }
+  .portfolio-modal .modal-content {
+    max-height: 90% !important;
+    background-color: transparent !important;
+  }
+
   /* ================= */
   /* AKHIR MAIN */
   /* ================= */
